src/bindings.rs

extern "C" {
    pub fn leveldb_comparator_destroy(arg1: *mut leveldb_comparator_t);
}
extern "C" {
    pub fn leveldb_filterpolicy_create(
        state: *mut ::std::os::raw::c_void,
        destructor: ::std::option::Option<unsafe extern "C" fn(arg1: *mut ::std::os::raw::c_void)>,
        create_filter: ::std::option::Option<
            unsafe extern "C" fn(
                arg1: *mut ::std::os::raw::c_void,
                key_array: *const *const ::std::os::raw::c_char,
                key_length_array: *const usize,
                num_keys: ::std::os::raw::c_int,
                filter_length: *mut usize,
            ) -> *mut ::std::os::raw::c_char,
        >,
        key_may_match: ::std::option::Option<
            unsafe extern "C" fn(
                arg1: *mut ::std::os::raw::c_void,
                key: *const ::std::os::raw::c_char,
                length: usize,
                filter: *const ::std::os::raw::c_char,
                filter_length: usize,
            ) -> u8,
        >,
        name: ::std::option::Option<
            unsafe extern "C" fn(
                arg1: *mut ::std::os::raw::c_void,
            ) -> *const ::std::os::raw::c_char,
        >,
    ) -> *mut leveldb_filterpolicy_t;
}
extern "C" {
    pub fn leveldb_filterpolicy_destroy(arg1: *mut leveldb_filterpolicy_t);
}
extern "C" {
    pub fn leveldb_filterpolicy_create_bloom(
        bits_per_key: ::std::os::raw::c_int,
    ) -> *mut leveldb_filterpolicy_t;
}
extern "C" {
    pub fn leveldb_readoptions_create() -> *mut leveldb_readoptions_t;
}
extern "C" {
    pub fn leveldb_readoptions_destroy(arg1: *mut leveldb_readoptions_t);
}
extern "C" {
    pub fn leveldb_readoptions_set_verify_checksums(arg1: *mut leveldb_readoptions_t, arg2: u8);
}
extern "C" {
    pub fn leveldb_readoptions_set_fill_cache(arg1: *mut leveldb_readoptions_t, arg2: u8);
}
extern "C" {
    pub fn leveldb_readoptions_set_snapshot(
        arg1: *mut leveldb_readoptions_t,
        arg2: *const leveldb_snapshot_t,
    );
}
extern "C" {
    pub fn leveldb_writeoptions_create() -> *mut leveldb_writeoptions_t;
}
extern "C" {
    pub fn leveldb_writeoptions_destroy(arg1: *mut leveldb_writeoptions_t);
}
extern "C" {
    pub fn leveldb_writeoptions_set_sync(arg1: *mut leveldb_writeoptions_t, arg2: u8);
}
extern "C" {
    pub fn leveldb_cache_create_lru(capacity: usize) -> *mut leveldb_cache_t;
}
extern "C" {
    pub fn leveldb_cache_destroy(cache: *mut leveldb_cache_t);
}
extern "C" {
    pub fn leveldb_create_default_env() -> *mut leveldb_env_t;
}
extern "C" {
    pub fn leveldb_env_destroy(arg1: *mut leveldb_env_t);
}
extern "C" {
    pub fn leveldb_env_get_test_directory(arg1: *mut leveldb_env_t) -> *mut ::std::os::raw::c_char;
}
extern "C" {
    pub fn leveldb_free(ptr: *mut ::std::os::raw::c_void);
}
extern "C" {
    pub fn leveldb_major_version() -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn leveldb_minor_version() -> ::std::os::raw::c_int;
}
pub type __builtin_va_list = *mut ::std::os::raw::c_char;

